# smart-meeting-RK3588

./: LICENSE  README.md
c_realtime_infer_demo/: CLAUDE.md  yolo_camera.py
c_realtime_infer_demo/.trae/documents/: c_plus_plus_replacement_for_python_yolo_module.md
c_realtime_infer_demo/camera_infer/: CMakeLists.txt  build.sh  yolo_camera.cc  yolo_camera_fast.cc
c_realtime_infer_demo/yolo_core/: CMakeLists.txt  build.sh
c_realtime_infer_demo/yolo_core/bindings/: yolo_module.cc
c_realtime_infer_demo/yolo_core/include/: post_process.h  rknn_context.h  rknn_pool.h  types.h  yolo_engine.h
c_realtime_infer_demo/yolo_core/src/: post_process.cc  rknn_context.cc  rknn_pool.cc  yolo_engine.cc
demo/: .gitignore  CLAUDE.md  apriltag_detector_demo.py  calibrate_gui.py  fusion_params.json  requirements.txt  sound_source_tracker.py  test_storage.py  visual_tracker_demo.py  xvf_calibration.json
demo/app_streamlit/: Home.py  UI_UX优化说明.md  ui_style.py
demo/app_streamlit/pages/: 01_会前准备.py  02_会议控制台.py  03_会议记录与总结.py  04_数据库调试.py  05_Agent控制台.py
demo/configs/: agent_policy.json  desk_card_config.json
demo/core/: __init__.py  agent_context.py  agent_llm.py  agent_llm_worker.py  agent_rules.py  agent_state.py  agent_types.py  agent_worker.py  alsa_capture.py  alsa_device_list.py  announcer.py  apriltag_camera.py  audio_player.py  audio_vad.py  calibration.py  control_api.py  desk_card_generator.py  desk_card_generator_v0.py  display_env.py  duplex_controller.py  event_bus.py  fusion_engine.py  llm_service.py  meeting_service.py  metrics_collector.py  network_utils.py  overlay_renderer.py  pwm_controller.py  respeaker.py  silero_vad.py  speaker_identity.py  stream_publisher.py  tag_detect_worker.py  tts_cache.py  tts_engine.py  tts_policy.py  tts_router.py  tts_templates.py  yolo_camera.py
demo/demos/: __init__.py  apriltag_detector.py  fusion_tracker.py  silero_vad_debug.py  tts_demo.py
demo/func/: func_yolov8_optimize.py  func_yoloworld.py
demo/rknnpool/: rknnpool_ld.py
demo/scripts/: fusion_tracker.desktop  install_services.sh  smart-meeting-runtime.service  smart-meeting-streamlit.service  start_all.sh  start_fusion_tracker.sh  start_streamlit.sh  stop_all.sh
demo/storage/: __init__.py  db.py  event_bridge.py  migration.py  models.py  repo.py
demo/storage/migrations/: 001_initial.py  002_agent_tables.py
